Use three rows for results to prevent truncating

--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -16,9 +16,11 @@
 }
 
 .tableData {
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  display: -webkit-box;
+   -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .type {
